# ngrobo

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  IDEAS.md  LICENSE  README-backup.rst  README.md  README.rst  appium-server.py  cli_verifier.py  conftest.py  note.md  nrobo.py  package.py  package_upload.py  pyproject.toml  pyproject.toml222  pytest-copy.ini  requirements.txt  test-frame.py  test-nrobo-framework.py  validate_nrobo.py  validatenrobo.py  validatetest_individually.py
.github/workflows/: codeql.yml
cli/: __init__.py
cli/check/: __init__.py
cli/compile/: __init__.py
cli/development/: __init__.py
cli/devlopment/: __init__.py
cli/downloads/: __init__.py
cli/publish/: __init__.py
framework_tests/: __init__.py  conftest.py  test_launcher_functionalities.py  test_package_presence.py  test_upgrade_package.py  test_version_nrobo.py
framework_tests/nrobo_args/: test_nrobo_args_package.py
framework_tests/version/: test_version_pkg.py
key/download-stats/: 2024_03_03_1340.md  2024_03_03_2447.md  2024_03_04_9090.md  2024_03_06_2047.md  2024_03_19_8890.md  2024_03_23_5787.md  2024_03_31_6101.md  2024_04_05_4714.md  2024_04_11_4111.md  2025_03_30_3200.md  Country code and country names.md
key/download-stats/2024_03_01/: 2024_03_01_9934.md
key/download-stats/2024_03_02/: 2024_03_02_7000.md
key/download-stats/2024_03_03/: 2024_03_03_9417.md
key/download-stats/2024_03_04/: 2024_03_04_4053.md
key/download-stats/2024_03_05/: 2024_03_05_7993.md
key/download-stats/2024_03_07/: 2024_03_07_9808.md
key/download-stats/2024_03_08/: 2024_03_08_5774.md
key/download-stats/2024_03_10/: 2024_03_10_8019.md
key/download-stats/2024_03_11/: 2024_03_11_2446.md
key/download-stats/2024_03_12/: 2024_03_12_3055.md
key/download-stats/2024_03_13/: 2024_03_13_8026.md
key/download-stats/2024_03_14/: 2024_03_14_5455.md
key/download-stats/2024_03_17/: 2024_03_17_7336.md
key/download-stats/2024_03_20/: 2024_03_20_1744.md
key/download-stats/2024_03_22/: 2024_03_22_6646.md
key/download-stats/2024_03_24/: 2024_03_24_9714.md
key/download-stats/2024_03_30/: 2024_03_30_9200.md
key/download-stats/2024_04_01/: 2024_04_01_3070.md
key/download-stats/2024_04_03/: 2024_04_03_2937.md
key/download-stats/2024_04_04/: 2024_04_04_6944.md
key/download-stats/2024_04_06/: 2024_04_06_1252.md
key/experiments/pytest/: pytest-life-cycle-logs
notes/: allure.txt  hatch.txt  notes-tree.txt  packaging.txt  pip  pytest.txt  rich formating for console.txt  selenium  selenium grid.md  selenium grid.txt.py
notes/documentation/: documentation-python-guide.md  reStructuredText.md
notes/nrobo reports/: allure.txt
notes/packaging/: compileall_module.md  cpython vs python.txt  hatch.txt  packaging-safely.md  packaging.txt
notes/pytest/: pytest.md
notes/python/: pathlib_.md  pytest.txt  python.md  regular_expression.txt  rich formating for console.md  subprocesses.md
notes/selenium_webdriver/: page_factory_in_python.md  selenium  selenium_.md
notes/selenium_webdriver/driver/: chrome_driver  edge-driver.md  safari-driver.md
nrobo/: __init__.py  __main__.py  main.py  requirements.txt
nrobo/appium/: __init__.py  android_capability.yaml  ios_capability.yaml
nrobo/aws/: __init__.py
nrobo/browserConfigs/: __init__.py  appium_capability.yaml  capability.yaml  chrome_config.txt  chrome_prefs.yaml
nrobo/browser_configs/: __init__.py  markers.yaml
nrobo/browsers/: __init__.py
nrobo/browsers/chrome/: __init__.py
nrobo/browsers/edge/: __init__.py
nrobo/browsers/firefox/: __init__.py
nrobo/browsers/safari/: __init__.py
nrobo/cli/: __init__.py  cli_args.py  cli_constansts.py  cli_constants.py  cli_version.yaml  launcher.py  main.py  nglobals.py
nrobo/cli/detection/: __init__.py
nrobo/cli/formatting/: __init__.py
nrobo/cli/install/: __init__.py  requirements.txt
nrobo/cli/ncodes/: __init__.py
nrobo/cli/nrobo_args/: __init__.py
nrobo/cli/tools/: __init__.py
nrobo/cli/upgrade/: __init__.py
nrobo/db/: __init__.py
nrobo/exceptions/: __init__.py
nrobo/framework/: conftest-host.py  conftest_host.py  nrobo-config.yaml  requirements.txt
nrobo/framework/pages/: PageDemo.py  PageDemoBlaze.py  PagePyPiHome.py  PageSearch.py  __init__.py  page_pypi_home.py  page_search.py
nrobo/framework/tests/: PyPi_home_page_test.py
nrobo/framework/tests/gui/: PyPi_home_page_test.py  google_home_page_test.py  test_sample_1.py
nrobo/framework/tests/selenium_wrapper_nrobo_methods/: test_action_chain_methods.py  test_alert_methods.py  test_element_wrapper_methods.py  test_nrobo_methods.py  test_nrobo_wait_methods.py  test_select.py
nrobo/selenese/: __init__.py
nrobo/util/: __init__.py
nrobo/util/commands/: __init__.py
nrobo/util/common/: __init__.py
nrobo/util/constants/: __init__.py
nrobo/util/database/: connectors.py
nrobo/util/filesystem/: __init__.py
nrobo/util/network/: __init__.py
nrobo/util/platform/: __init__.py
nrobo/util/process/: __init__.py
nrobo/util/python/: __init__.py
nrobo/util/regex/: __init__.py
nrobo/util/version/: __init__.py
nrobo_cli/: __init__.py
nrobo_framework_test/: test_package_presence.py
nrobo_framework_tests/: conftest.py  test_nrobo_framework.py  test_package_presence.py  test_upgrade_package.py  test_version_nrobo.py
tests/apps/TestApp.app/: Info.plist  TestApp
tests/conftest/: test_conftest_py.py
tests/mobile/appium/: test_appium.py
tests/no_gui/: test_no_gui.py
tests/selenium_wrapper_nrobo_methods/: test_action_chain_methods.py  test_alert_methods.py  test_element_wrapper_methods.py  test_nrobo_methods.py  test_nrobo_wait_methods.py  test_select.py
tests/web/: test_sample.py
tests/web/conftest/: test_conftest_py.py
tests/web/faker/: test_faker.py
tests/web/no_gui/: __init__.py  no_gui_test.py  test_no_gui.py
tests/web/selenium_wrapper_nrobo_methods/: test_action_chain_methods.py  test_alert_methods.py  test_browser_switches.py  test_element_wrapper_methods.py  test_nrobo_methods.py  test_nrobo_wait_methods.py  test_select.py
versions/: prod.yaml  test.yaml
(+19 files in other folders)
