# Build system selection
[build-system]
requires = ["setuptools >= 40.9.0",]
build-backend = "setuptools.build_meta"

[owner]
name = "Panchdev Singh Chauhan"

authors = [{ name = "Panchdev Chauhan", email = "erpanchdev@gmail.com" }]

# Project details
[project]
name = "nrobo"
description = "An Automated Testing Framework For Web Testing By NamasteyDigitalIndia.com"
readme = "README.md"
version = "2024.2.0"
keywords = ["test automation", "test automation framework", "automated testing", "automation testing", "testing", "qa", "acceptance test", "automation"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "License :: Freeware",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Information Technology",
    "Framework :: Pytest"
]
requires-python = ">=3.8"
dependencies = ["pytest", "cowsay"]

[project.optional-dependencies]
dev = ["pytest", "cowsay"]

[project.urls]
"Homepage" = "https://pypi.org/project/nrobo/"
"Bug Tracker" = "https://github.com/pancht/nrobodocs/issues"
"changelog" = "https://github.com/pancht/nrobodocs/blob/master/CHANGELOG.md"

[project.scripts]
nrobo = "nrobo.cli:main"

# Tools configurations
[tool.pytest.ini_options]
testpaths = [
    "tests",
    "tests_api",
    "tests_performance"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nrobo*",]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.*"]