# pyproject.toml specification: https://packaging.python.org/en/latest/specifications/pyproject-toml/
# setuptools doc: https://setuptools.pypa.io/en/latest/

# Build system selection
[build-system]
requires = ["setuptools >= 40.7.0",]
build-backend = "setuptools.build_meta"

# Project details
[project]
name = "nrobo"
version = "2024.35.0"
authors = [{name="Panchdev Singh Chauhan", email="erpanchdev@gmail.com"}]
maintainers = [{name="Panchdev Singh Chauhan", email="erpanchdev@gmail.com"}]
description = "Powerful! Yet, Easy to USE! Automated Testing Framework"
readme = "README.rst"
keywords = ["test automation", "test automation framework", "automated testing", "automation testing", "testing", "qa", "acceptance test", "automation"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing :: Mocking",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing :: Acceptance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Software Development :: Testing :: Mocking",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "License :: Freeware",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Information Technology",
    "Framework :: Pytest"
]
requires-python = ">=3.8"
dependencies = ["pytest", "cowsay"]

[project.optional-dependencies]
dev = ["pytest"]
test = ["pytest"]

[project.urls]
"Homepage" = "https://pypi.org/project/nrobo/"
"GitHub Repo" = "https://github.com/pancht/ngrobo"
"Bug Tracker" = "https://github.com/pancht/ngrobo/issues"
"changelog" = "https://github.com/pancht/ngrobo/blob/master/CHANGELOG.md"

[project.scripts]
nrobo = "nrobo.cli:main"

# Tools configurations
[tool.pytest.ini_options]
testpaths = [
    "tests",
    #"tests_api",
    #"tests_performance"
]
# Register new markers
markers = [
    # Doc: https://docs.pytest.org/en/stable/how-to/mark.html#registering-marks
        "sanity: marks as sanity test",
        "regression: mark as regression test",
        "ui: mark as ui test",
        "api: mark as api tests",
        "nogui: mark as NOGUI tests"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["nrobo*"]
exclude = ["tests*", "cli*", "notes*", "venv*", ".venv*", "framework*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.*"]

